# swagger.json
@@ -41,6 +41,14 @@
             "schema": {
               "$ref": "#/definitions/Table"
             }
+          },
+          "404": {
+            "description": "NOT FOUND",
+            "headers": {}
+          },
+          "500": {
+            "description": "INTERNAL SERVER ERROR",
+            "headers": {}
           }
         }
       }
@@ -67,7 +75,15 @@
             "headers": {},
             "schema": {
               "$ref": "#/definitions/Table"
-            }
+            }           
+          },
+          "404": {
+            "description": "NOT FOUND",
+            "headers": {}
+          },
+          "500": {
+            "description": "INTERNAL SERVER ERROR",
+            "headers": {}
           }
         }
       },
@@ -89,6 +105,14 @@
         "responses": {
           "204": {
             "description": "No Content",
+            "headers": {}
+          },
+          "404": {
+            "description": "NOT FOUND",
+            "headers": {}
+          },
+          "500": {
+            "description": "INTERNAL SERVER ERROR",
             "headers": {}
           }
         }
@@ -338,10 +362,47 @@
         "responses": {
           "200": {
             "description": "OK",
-            "headers": {},
-            "schema": {
-              "$ref": "#/definitions/PaginatedListWrapper"
-            }
+            "headers": {}         
+          },
+          "404": {
+            "description": "NOT FOUND",
+            "headers": {}
+          },
+          "500": {
+            "description": "INTERNAL SERVER ERROR",
+            "headers": {}
+          }
+        }
+      }
+    },
+    "/restaurants/getTables/{restaurant_id}": {
+      "get": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "type": "integer",
+            "name": "restaurant_id",
+            "in": "path",
+            "required": true
+          }       
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "headers": {}
+          },
+          "404": {
+            "description": "NOT FOUND",
+            "headers": {}
+          },
+          "500": {
+            "description": "INTERNAL SERVER ERROR",
+            "headers": {}
           }
         }
       }
